Write end-of-month wording for every remaining Claude prompt
Split every EOM-flavoured Claude call (per-tactic conclusions, campaign
results, the five breakdown sections, tactic thoughts, the final narrative
alignment, and the classic direct-to-deck Batch A) so each states the
campaign is still running instead of the end-of-campaign wording it
inherited, feeds per-tactic overviews the sheet's daily pacing curve so
gaps against plan read as pacing, and names the reporting month in the
final alignment pass from the deck's own flight-dates label.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>